# gaussian-splatting-uv

./: INSTALL.md  pyproject.toml
patches/: diff-gaussian-rasterization.patch  fused-ssim.patch  simple-knn.patch
scene/: dataset_readers.py
